fix text-align issues

--- a/src/pages/Arcade/Arcade.module.scss
+++ b/src/pages/Arcade/Arcade.module.scss
@@ -214,6 +214,7 @@
   background: none;
   border: none;
   cursor: pointer;
+  text-align: center;
   line-height: 1.5;
   font: 700 1.2rem $font-family;
   padding: 5em;
